--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 /* styles.css */
 body {
-  font-family: 'Bebas Neue', sans-serif;
-  background-color: #f0f0f0;
+  background-image: url("logos/fondo.png"); /* Ruta de la imagen */
+  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  background-attachment: fixed; /* Mantiene el fondo fijo al hacer scroll */
   margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  font-family: 'Bebas Neue', sans-serif;
 }
 
 .container {
