--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Estilo general del cuerpo */
 body {
-  background-image: url("logos/fondo_azul.jpg");
+  background-image: url("logos/fondo.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
