--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Estilo general del cuerpo */
 body {
-  background-image: url("logos/fondo.png");
+  background-image: url("logos/fondo_3.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -39,16 +39,36 @@ h1 {
   color: white;
 }
 
-/* Estilo de cada partido */
 .partido {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 15px;
-  border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.05);
+  margin-bottom: 25px;
+  padding: 20px 25px;
+  border-radius: 20px;
+
+  background-color: rgba(0, 0, 0, 0.65); /* Fondo oscuro semi transparente */
+  border: 2px solid rgba(255, 255, 255, 0.15); /* Borde blanco tenue */
+  box-shadow: 0 0 20px rgba(255, 255, 0, 0.3); /* Sombra amarilla suave */
+
+  backdrop-filter: blur(5px); /* Difumina el fondo */
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
+
+.partido:hover {
+  transform: scale(1.02); /* Efecto zoom suave al pasar el mouse */
+  box-shadow: 0 0 25px rgba(255, 255, 0, 0.5); /* Más brillo al hacer hover */
+}
+
+.fecha {
+  background-color: #4CAF50; /* Fondo verde */
+  color: white; /* Texto blanco */
+  padding: 5px 10px; /* Espaciado interno */
+  border-radius: 5px; /* Bordes redondeados */
+  font-weight: bold; /* Texto en negrita */
+  display: inline-block; /* Ajusta el tamaño al contenido */
+  margin-bottom: 10px; /* Espaciado inferior */
+}
+
 
 /* Contenedor de equipos */
 .equipos {
@@ -63,15 +83,15 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;
-  font-size: 14px;
+  color: rgb(250, 250, 250);
+  font-size: 18px;
 }
 
 .equipo img {
-  width: 60px;
-  margin-bottom: 5px;
+  width: 100px;
+  margin-bottom: 10px;
   background-color: transparent; /* Elimina el fondo blanco */
-  border-radius: 50%; /* Hace que los logos sean circulares */
+   /* Hace que los logos sean circulares */
 }
 
 /* Inputs para los marcadores */
